Shipment controller